# complex-QA

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
backend/: cli.py  embeddings.py  main.py  settings.yaml
backend/api/: __init__.py  dependencies.py  query.py  schemas.py
backend/backup/: backup_chunker.py  backup_chunker2.py
backend/data/raw/: rag_structure_csv.csv
backend/db/: bm25_index.pkl
backend/db/faiss_store/: index.faiss
backend/extracted/: acronyms.json  documents.json  image_captions.json  parent_index.json
backend/ingestion/: acronym_extractor.py  chunker.py  image_captioner.py  indexer.py  table_extractor.py  verify_index.py
backend/retriver/: context_builder.py  rag_chain.py  retriever.py
backend/test/: test_chain_live.py  test_image_citations.py  test_rag.py  test_retriever.py
frontend/: README.md  app.py
